src/global/navbar.css
.itabLogo {
    width: 100px;
    border-radius: 50%;
    padding: 1rem;
}

#titleWrapper h1 {
    color: white;
    font-size: 1.3rem;
    text-align: center;
}

#titleWrapper {
    border-top: 5px solid orange;
    display: flex;
    align-items: center;
    gap: 10px;
    justify-content: space-between;
    flex-shrink: 0;
}

.blueBackground {
    background-color: rgb(8, 45, 73);
}

.d-none {
    max-height: 0;
}

.d-show {
    max-height: 100vh;
}

#dropdownButton {
    margin: 1rem;
    font-size: 1.3rem;
    border-radius: 5px;
    margin-right: 1rem;
}

#navList {
    list-style: none;
    text-align: center;
    background-color: white;
    overflow: hidden;
    transition: 0.5s all ease;
}

#desktopNavList {
    display: none;
}

#navList a {
    font-size: 1.5rem;
    color: rgb(8, 45, 73);
    display: block;
    padding: 1rem;
    border-top: 2px solid rgb(0, 0, 0, 0.1);
    text-decoration: none;
}

@media (min-width: 540px) {
    #titleWrapper h1 {
        font-size: 1.7rem;
    }
}

@media (min-width: 700px) {
    #titleWrapper button {
        display: none;
    }

    #desktopNavList {
        display: flex;
        gap: 1rem;
        list-style: none;
        font-size: 2rem;
        margin-right: 1rem;
    }

    #desktopNavList li a {
        color: rgb(212, 175, 55);
    }

    #desktopNavList li a:hover {
        color: orangered;
    }
}

@media (min-width: 992px) {
    #titleWrapper h1 {
        font-size: 2.3rem;
    }

    .itabLogo {
        width: 150px;
    }
}

